<resources>
    <string name="app_name">Eatery Social Network</string>
    <string name="hello">Привет!</string>
    <string name="create_account">Ещё нет аккаунта? Создай!</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="hide_pass">Спрятать пароль</string>
    <string name="show_pass">Показать пароль</string>
    <string name="terms_and_conditions_header">Условия использования и политика конфиденциальности</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="do_not_have_account">Еще нет аккаунта?</string>
    <string name="welcome_text">Приложение для автоматической столовой AutoEatery</string>
    <string name="get_started">Хочу покушать</string>
    <string name="app_description">Социальная сеть для самых голодных</string>
    <string name="sign_with">Войти с помощью</string>
    <string name="gplus">google+</string>
    <string name="vk">vk</string>
    <string name="github">github</string>
    <string name="chat_panel">Chat panel</string>
    <string name="profile_pic">profile pic</string>
    <string name="name">Имя</string>
    <string name="profile">Профиль</string>
    <string name="message">Сообщение</string>
    <string name="time">Время отправки</string>
    <string name="reg">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="loginRef">Уже есть аккаунт? Войти</string>
</resources>