<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:minHeight="65dp"
        app:cardBackgroundColor="@color/colorGrey"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTextView"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:gravity="start"
                android:text="@string/name"
                android:textColor="@color/colorBlack"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profileTextView"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:gravity="start"
                android:text="@string/profile"
                android:textColor="@color/colorBlack"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/messageTextView"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:gravity="start"
                android:text="@string/message"
                android:textColor="@color/colorBlack"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timeTextView"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:gravity="start"
                android:text="@string/time"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>